# urnik

./: .gitignore  Cargo.toml  rustfmt.toml
src/: main.rs  models.rs  profile.rs  schedule_fetch.rs
urnik-demoralizer/: .gitignore
urnik-demoralizer/src/: config.rs  main.rs  models.rs  schedule_fetch.rs  textutils.rs  usage.in
urnik-frontend/: .gitignore  .swcrc  index.html  package.json  pnpm-lock.yaml  script.js  spack.config.js  tsconfig.json  webpack.common.js  webpack.dev.js
urnik-frontend/src/: index.ts  page.ts  page.tsx  style.scss  table.ts  table.tsx  timetable.ts  types.ts
urnik-frontend/src/jsx/: jsx.ts  jsxFactory.ts
