[package]
name = "urnik"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = { version = "0.6", default-features = false, features = ["track-caller"] }
askama = { version = "0.12" }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
rust-embed = "8.0"
indicatif = "0.17"
mimalloc = { version = "0.1", default-features = false }
owo-colors = { version = "3.5", features = ["supports-colors"] }
