[package]
name = "urnik"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = { version = "0.6", default-features = false, features = ["track-caller"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
serde_json = "1.0"
ureq = "2.7"
rust-embed = "8.0"
mimalloc = { version = "0.1", default-features = false }
owo-colors = { version = "3.5", features = ["supports-colors"] }
